# wealthlens-hq

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AGENT_MAP.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChatWithClaude.txt  CUsersjekytAppDataLocalTempfetch_ons_wealth_ci.py  LICENSE  Makefile  README.md  SECURITY.md  TODAY.md  audit_prs.sh  audit_prs_main.tsv  audit_prs_summary.md  docker-compose.yml  pyproject.toml
.agents/skills/: README.md
.claude/: settings.json  tier.json
.claude/hooks/: dispatch.py  post_tool_failure.py  session_start.py  smoke_test.py
.codex/: README.md
.codex/memories/: 00_ACTIVE.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_pipeline.md  feature_request.md
.github/workflows/: ci-analyst.yml  ci-backend.yml  ci-frontend.yml  ci-pipelines.yml  ci-sim.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml  e2e.yml  lighthouse.yml  weekly-data-update.yml
autodoc/: AGENT_INDEX.md  README.md
automation/analysis/: extract_action_items.py  summarise_research.py
automation/data-pipelines/: CLAUDE.md  _cells.py  chart_html.py  fetch_boe_rates.py  fetch_child_poverty.py  fetch_generational_wealth.py  fetch_hmrc_stats.py  fetch_ons_gdhi.py  fetch_ons_housing.py  fetch_ons_wealth.py  fetch_productivity_pay.py  fetch_tax_composition.py  fetch_wage_stagnation.py  fetch_wid_data.py  generate_simulator_dashboards.py  http_retry.py  requirements.txt  run_all.py  update_all.ps1  update_all.sh  validate.py
automation/og-images/: generate_og_images.py
automation/social-media/: chart_to_social.py
automation/workflows/: deploy.yml  weekly-data-update.yml
design/: CLAUDE_DESIGN_PROMPT.md
docs/: AI_LLM_DISCLOSURE.md  ARCHITECTURE.md  IHT_CALIBRATION.md  MODEL_CHARTER.md  WAVE12_SIMULATION_ENGINE_DESIGN.md  data-licences.md
docs/adr/: 0001-dashboard-route-prerendering.md  0001-hybrid-retrieval-rrf-flagged-reranker.md  0002-app-level-spend-cap-thin-client-seam.md  0003-reranker-embedding-hosting-selection.md
docs/agentic/: FAILURE_LEDGER.md  GIT_WORKFLOW.md  QUESTION_PROTOCOL.md  REVIEW_GATE.md  SKILL_REGISTRY.md  TOOL_PARITY.md
docs/plan/: HERO1_PLAN.md  WRITEUPS.md
docs/product/: PRODUCT_FRONTIER_2026-07.md  REALITY_CHECK_2026-07-11.md  freshness-grammar.md  frontier-candidates-2026-07.md
docs/redesign/: README.md  index.html  tokens.css
identity/: about-me.md  career-history.md  cover-letter-mysociety-2026.md  cover-letter-mysociety.tex  cv-mysociety-changes.md  cv-mysociety.tex  cv-notes.md  passions.md  personal-story.md  portfolio.md  positioning.md  principles.md  public-profiles.md  skills.md
journal/: YYYY-MM-DD.md
legal/: cic-notes.md  data-licences.md  privacy-policy.md  project-licence.md
meetings/: YYYY-MM-DD-topic.md
people/: contributors.md  onboarding.md  roles.md  thank-yous.md
projects/wealthlens-analyst/: .env.example  .gitignore  CLAUDE.md  POINTER.md  README.md  alembic.ini  pyproject.toml
projects/wealthlens-analyst/evals/: run_ragas.py
projects/wealthlens-analyst/evals/checks/: ask_response.schema.json  check_citations_live.py  check_compose_live.py  deterministic.py
projects/wealthlens-analyst/evals/golden/: golden_set.jsonl  golden_set.schema.json
projects/wealthlens-analyst/migrations/: README.md  env.py
projects/wealthlens-analyst/migrations/drafts/: 0001_chunks.py  0002_embeddings.py  0003_budgets.py  0004_query_log.py
projects/wealthlens-analyst/migrations/versions/: 0001_chunks.py  0002_embeddings.py  0003_budgets.py  0004_query_log.py
projects/wealthlens-analyst/src/wealthlens_analyst/: __init__.py  config.py  db.py
projects/wealthlens-analyst/src/wealthlens_analyst/answer/: __init__.py  abstain.py  citations.py  compose.py
projects/wealthlens-analyst/src/wealthlens_analyst/api/: __init__.py  app.py  routes.py  schemas.py
projects/wealthlens-analyst/src/wealthlens_analyst/budget/: __init__.py  middleware.py  models.py
projects/wealthlens-analyst/src/wealthlens_analyst/ingest/: __init__.py  fetch_documents.py  slice_corpus.py
projects/wealthlens-analyst/src/wealthlens_analyst/llm/: __init__.py  client.py
projects/wealthlens-analyst/src/wealthlens_analyst/retrieval/: __init__.py  dense.py  fts.py  fuse_rrf.py  rerank.py
projects/wealthlens-analyst/tests/: test_abstain.py  test_api.py  test_budget_models.py  test_citations.py  test_compose.py  test_dense.py  test_fts.py  test_fuse_rrf.py  test_golden_draft_guard.py  test_imports.py  test_ingest_write.py  test_llm_client.py  test_schemas.py  test_slice_corpus.py
projects/wealthlens-dashboard/: .env.example  CLAUDE.md  CONTRIBUTING.md  README.md
registries/: README.md  assumptions.yml  baselines.yml  sources.yml
research/data-sources/: data-source-registry.md
research/methodology/: was-caveats.md
research/raw/: 01-cv-analysis.md  02-career-strategy.md  03-strength-building.md  (+7 more)
resources/: 1779367399635_WealthLens_UK_Unified_Blueprint_v5.md  compass_artifact_wf-9086a2db-d947-48ad-bd79-c61e6e0db0c0_text_markdown.md  suggestions.txt
scripts/: generate_sitemap.py  generate_static_api.py
strategy/: branding-playbook.md  career-strategy.md  content-strategy.md  course-correction-2026-07.md  funding-strategy.md  growth-strategy.md  outreach-strategy.md  partnership-strategy.md  state-of-the-project-2026-07.md  volunteer-strategy.md
tasks/: ACTION-REQUIRED.md  active-sprint.md  backlog.md  bgv-go-no-go-2026.md  deadlines.md  done.md  hero1-backlog.md  hero1-corpus-candidates.md  inbox.md
tests/: conftest.py  test_agent_hooks.py  test_api.py  test_chart_html.py  test_extract_action_items.py  test_generate_static_api.py  test_http_retry.py  test_pipeline_boe_rates.py  test_pipeline_gdhi.py  test_pipeline_hmrc.py  test_pipeline_ons_housing.py  test_pipeline_ons_wealth.py  test_pipeline_tax_composition.py  test_pipeline_wid.py  test_validate.py
vision/: horizon.md  inspiration.md  mission.md  north-stars.md  theory-of-change.md
(+546 files in other folders)
