[project]
name = "wealthlens-hq"
version = "0.1.0"
description = "Open-source tools making UK wealth inequality data visible"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=9.0.3",
    "bandit>=1.7",
    "pandas-stubs>=2.1",
    "types-requests>=2.31",
    "httpx>=0.27",
    # Needed to type-check automation/og-images (it imports PIL); Pillow ships
    # its own py.typed marker, so no separate stub package is required.
    "Pillow>=10",
]
pipelines = [
    "requests>=2.31",
    "pandas>=2.1",
    "plotly>=5.18",
    "openpyxl>=3.1",
    "odfpy>=1.4",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["automation", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["wealthlens"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["plotly.*", "odf.*", "openpyxl.*", "requests.*"]
ignore_missing_imports = true

# wealthlens_sim is a separate, independently type-checked package (its own clean
# `python -m mypy wealthlens_sim` runs in ci-sim). Consumed from the automation /
# dashboard trees it is an opaque typed boundary: its py.typed marker isn't
# reliably visible across the editable-install boundary, so treat its imports as
# untyped here rather than failing this cross-package check on a packaging detail.
[[tool.mypy.overrides]]
module = ["wealthlens_sim.*"]
ignore_missing_imports = true

# automation/data-pipelines/ has a hyphen so it can't be a Python package;
# list modules explicitly instead of using a glob pattern.
[[tool.mypy.overrides]]
module = [
    "fetch_wid_data",
    "fetch_ons_housing",
    "fetch_ons_wealth",
    "fetch_hmrc_stats",
    "chart_html",
    "run_all",
    "validate",
    "extract_action_items",
    "summarise_research",
]
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
