[project]
name = "wealthlens-hq"
version = "0.1.0"
description = "Open-source tools making UK wealth inequality data visible"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    # Upper-capped at the next major for the same reason as the stub caps below: a
    # mypy major can tighten checks and turn a gate red on an unrelated PR.
    "mypy>=1.10,<2",
    "pytest>=9.0.3",
    "bandit>=1.7",
    # Upper-capped at the next major: a stub MAJOR can tighten annotations and turn
    # the automation mypy gate red on an unrelated PR. (A minor/patch tightening can
    # too, but then the dependabot bump's OWN CI goes red and auto-merge is blocked,
    # surfacing it — so only the major needs a hard cap.)
    "pandas-stubs>=2.1,<4",
    "types-requests>=2.31",
    "httpx>=0.27",
    # Needed to type-check automation/og-images (it imports PIL); Pillow ships
    # its own py.typed marker, so no separate stub package is required. Capped at the
    # next major so a Pillow major that reshapes ImageFont typing can't silently
    # break the gate (the og-images fix relies on FreeTypeFont | ImageFont).
    "Pillow>=10,<14",
]
pipelines = [
    "requests>=2.31",
    "pandas>=2.1",
    "plotly>=5.18",
    "openpyxl>=3.1",
    "odfpy>=1.4",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["automation", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["wealthlens"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
# root tests/ import the hyphenated pipeline + analysis dirs that conftest.py adds
# to sys.path at runtime (mypy does not execute conftest). Anchor those dirs to the
# config-file directory ($MYPY_CONFIG_FILE_DIR) so `mypy tests` resolves them
# regardless of the invocation CWD. This is the same root config the `mypy automation`
# gate reads (the extra search paths are harmless there — it imports none of these).
# ci-backend and `make backend-lint` both run `mypy projects/wealthlens-dashboard/backend`
# from the repo root, so they read THIS config (mypy resolves config by CWD, not by the
# target path) — the backend is checked at the same strictness as every other gate. Do
# NOT run `mypy .` from inside the backend dir: mypy would find no config there and fall
# back to permissive defaults (check_untyped_defs OFF).
mypy_path = [
    "$MYPY_CONFIG_FILE_DIR/automation/data-pipelines",
    "$MYPY_CONFIG_FILE_DIR/automation/analysis",
]

[[tool.mypy.overrides]]
module = ["plotly.*", "odf.*", "openpyxl.*", "requests.*"]
ignore_missing_imports = true

# The dashboard backend (app.*) is type-checked on its own in ci-backend; from the
# root tests/ it is an opaque boundary (tests import app.main / app.routers via the
# sys.path wiring in conftest). Treat it as untyped here rather than pulling the
# whole backend + its framework deps into this gate.
[[tool.mypy.overrides]]
module = ["app.*"]
ignore_missing_imports = true

# scripts/generate_static_api.py is imported by tests/test_generate_static_api.py
# via sys.path (like the backend above). scripts/ is not on mypy_path and is not
# its own gate, so treat it as an opaque boundary here rather than pulling it into
# this run. (Follow-up seeded: add a dedicated `mypy scripts` gate + fix its 4
# pre-existing type errors, then drop this override.)
[[tool.mypy.overrides]]
module = ["generate_static_api"]
ignore_missing_imports = true

# wealthlens_sim is a separate package with its OWN clean `mypy wealthlens_sim`
# run in ci-sim. Its py.typed marker is not reliably visible across the editable-
# install boundary, so mypy run here reports import-untyped for every wealthlens_sim
# import. This override silences that — but be explicit about the trade-off: it makes
# the sim API resolve to `Any` here, so the ONE automation consumer of that API
# (generate_simulator_dashboards.py) is NOT type-checked against the real sim
# signatures at this seam. That cross-package correctness is instead covered at
# RUNTIME by automation/data-pipelines/tests/test_simulator_dashboards.py, which
# ci-sim runs against the editable sim (a wrong arg type there fails that test).
# Deep cross-package type-checking is intentionally out of scope: pulling the sim
# source onto mypy_path would also drag its transitive deps (scipy/pydantic/pyyaml)
# into this gate's environment, which it does not provision.
[[tool.mypy.overrides]]
module = ["wealthlens_sim.*"]
ignore_missing_imports = true

# automation/data-pipelines/ has a hyphen so it can't be a Python package;
# list modules explicitly instead of using a glob pattern.
[[tool.mypy.overrides]]
module = [
    "fetch_wid_data",
    "fetch_ons_housing",
    "fetch_ons_wealth",
    "fetch_hmrc_stats",
    "chart_html",
    "run_all",
    "validate",
    "extract_action_items",
    "summarise_research",
]
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
